--- a/README
+++ b/README
@@ -2,14 +2,14 @@ WebMoney XML Interfaces
 http://my-tools.net/wmxi/
 
 
-Форум поддержки: 
+Р¤РѕСЂСѓРј РїРѕРґРґРµСЂР¶РєРё: 
 
 http://talk.dkameleon.net/
 
 
-Советы и подсказки:
+РЎРѕРІРµС‚С‹ Рё РїРѕРґСЃРєР°Р·РєРё:
 
-При отображении ХМЛ дерева имейте ввиду, что не все ноды могут отображаться,
-тем не менее они присутствуют и к ним можно добраться по дереву.
-Это особенности класса SimpleXML
+РџСЂРё РѕС‚РѕР±СЂР°Р¶РµРЅРёРё РҐРњР› РґРµСЂРµРІР° РёРјРµР№С‚Рµ РІРІРёРґСѓ, С‡С‚Рѕ РЅРµ РІСЃРµ РЅРѕРґС‹ РјРѕРіСѓС‚ РѕС‚РѕР±СЂР°Р¶Р°С‚СЊСЃСЏ,
+С‚РµРј РЅРµ РјРµРЅРµРµ РѕРЅРё РїСЂРёСЃСѓС‚СЃС‚РІСѓСЋС‚ Рё Рє РЅРёРј РјРѕР¶РЅРѕ РґРѕР±СЂР°С‚СЊСЃСЏ РїРѕ РґРµСЂРµРІСѓ.
+Р­С‚Рѕ РѕСЃРѕР±РµРЅРЅРѕСЃС‚Рё РєР»Р°СЃСЃР° SimpleXML
 
