--- a/src/webmoney/i18n/en_US/WMXIErrors.xml
+++ b/src/webmoney/i18n/en_US/WMXIErrors.xml
@@ -15,8 +15,8 @@
 	<error code=  "-6" scope="*">Invalid value for w3s.request/trans/amount</error>
 	<error code=  "-7" scope="*">Invalid value for w3s.request/trans/desc</error>
 	<error code=  "-8" scope="*">Field for w3s.request/trans/pcode is too long</error>
-	<error code=  "-9" scope="*">Field w3s.request/trans/pcode should not be empty if w3s.request/trans/period > 0</error>
-	<error code= "-10" scope="*">Field w3s.request/trans/pcode should be empty if w3s.request/trans/period = 0</error>
+	<error code=  "-9" scope="*">Field w3s.request/trans/pcode should not be empty if w3s.request/trans/period greater than 0</error>
+	<error code= "-10" scope="*">Field w3s.request/trans/pcode should be empty if w3s.request/trans/period equal to 0</error>
 	<error code= "-11" scope="*">Invalid value for w3s.request/trans/wminvid</error>
 	<error code= "-12" scope="*">Identifier sent for w3s.request/wmid is not registered</error>
 	<error code= "-14" scope="*">Signature verification failed</error>
@@ -27,7 +27,7 @@
 	<error code=   "6" scope="*">Correspondent not found</error>
 	<error code=   "7" scope="*">Recipient’s WM purse not found</error>
 	<error code=  "11" scope="*">Sender’s WM purse not found</error>
-	<error code=  "13" scope="*">Transaction amount should be > 0</error>
+	<error code=  "13" scope="*">Transaction amount should be greater than 0</error>
 	<error code=  "15" scope="*">Internal error when creating transaction</error>
 	<error code=  "17" scope="*">Insufficient amount of funds in the purse</error>
 	<error code=  "19" scope="*">Internal error when creating transaction</error>
